Move Dropzone to webpack

--- a/indico/htdocs/sass/_custom.scss
+++ b/indico/htdocs/sass/_custom.scss
@@ -19,6 +19,7 @@
 // Use this for the sole purpose of ext_modules customization
 // ============================================================================
 
+@import 'custom/dropzone';
 @import 'custom/jquery-ui';
 @import 'custom/jquery-ui-datepicker';
 @import 'custom/jquery-multiselect';
