--- a/indico/web/templates/base.html
+++ b/indico/web/templates/base.html
@@ -17,7 +17,7 @@
     <!-- end -->
 
     <script>
-        window.CKEDITOR_BASEPATH = {{ url_for('assets.js', filename='lib/ckeditor/')|tojson() }};
+        window.CKEDITOR_BASEPATH = {{ url_for('assets.static_asset', folder='webpack', path='ckeditor/')|tojson() }};
     </script>
 
     {% assets 'base_js' -%}
