--- a/indico/web/client/styles/themes/compact.scss
+++ b/indico/web/client/styles/themes/compact.scss
@@ -34,6 +34,15 @@ td {
    color: #000;
 }
 
+table p {
+    margin-top: 0;
+}
+
+.headerselected {
+    color: #fff;
+    background: #006;
+ }
+
 a:visited {
    color: #0000FF;
    background: transparent;
