--- a/indico/web/client/styles/partials/_timelines.scss
+++ b/indico/web/client/styles/partials/_timelines.scss
@@ -135,7 +135,7 @@
     }
 }
 
-.i-timeline-item-label.avatar-placeholder {
+.i-timeline .i-timeline-item-label.avatar-placeholder {
     display: flex;
     align-items: center;
     justify-content: center;
