Add missing CSS attribute in timetable blocks

--- a/indico/web/client/styles/legacy/timetable.css
+++ b/indico/web/client/styles/legacy/timetable.css
@@ -43,6 +43,7 @@ div.timetableFullScreenHeader {
 }
 
 .timetableBlock {
+    cursor: pointer;
     border: 1px solid #bbb;
     border-radius: 3px;
     -moz-border-radius: 3px;
