--- a/indico/web/client/styles/base/_defaults.scss
+++ b/indico/web/client/styles/base/_defaults.scss
@@ -66,7 +66,7 @@ $default-box-shadow-color: lighten($gray, $color-variation);
 
 @mixin gradient($start-color, $end-color) {
     background: $start-color;
-    background-image: linear-gradient(top, $start-color, $end-color);
+    background-image: linear-gradient(to bottom, $start-color, $end-color);
 }
 
 @mixin placeholder-color($color: inherit) {
