Fix custom css/js handling in static sites
Also use a fake manifest entry to handle these custom files so more code
can be reused for asset and customization files

--- a/indico/web/templates/base.html
+++ b/indico/web/templates/base.html
@@ -17,13 +17,8 @@
     {{ webpack['common.js'] }}
     {{ webpack['main.js'] }}
     {{ webpack['main.css'] }}
-
-    {% for url in get_custom_assets('js') -%}
-        <script src="{{ url }}"></script>
-    {% endfor %}
-    {% for url in get_custom_assets('css') -%}
-        <link rel="stylesheet" type="text/css" href="{{ url }}">
-    {% endfor %}
+    {{ webpack['__custom.js'] }}
+    {{ webpack['__custom.css'] }}
 
     {% block head %}{% endblock %}
 </head>
