--- a/indico/web/client/styles/_partials.scss
+++ b/indico/web/client/styles/_partials.scss
@@ -39,6 +39,7 @@
 @import "partials/messageboxes";
 @import "partials/object-lists";
 @import "partials/paddedboxes";
+@import "partials/pagination";
 @import "partials/payment";
 @import "partials/plugins";
 @import "partials/progress";
