Add page arrow buttons in Paginator

--- a/indico/web/client/styles/partials/_pagination.scss
+++ b/indico/web/client/styles/partials/_pagination.scss
@@ -26,4 +26,10 @@
     li:not(:last-child) {
         margin-right: 0.2em;
     }
+
+    .page-arrow {
+        a {
+            height: 100%;
+        }
+    }
 }
