Use first-child selector properly

--- a/indico/web/client/styles/modules/_attachments.scss
+++ b/indico/web/client/styles/modules/_attachments.scss
@@ -343,7 +343,7 @@
         white-space: nowrap;
 
         margin-top: 0.2em;
-        &:not(first-child) {
+        &:not(:first-child) {
             margin-left: 0.2em;
         }
         &.is-protected {
