--- a/indico/web/templates/indico_base.html
+++ b/indico/web/templates/indico_base.html
@@ -24,6 +24,7 @@
     </script>
 
     <script type="text/javascript" src="{{ url_for('assets.i18n_locale', locale_name=session.lang) }}"></script>
+    <script type="text/javascript" src="{{ url_for('assets.i18n_locale_react', locale_name=session.lang) }}"></script>
     <script type="text/javascript" src="{{ url_for('assets.js_vars_global') }}"></script>
 
     {% for bundle in bundles %}
