Simple list of rooms

--- a/indico/modules/rb_new/client/js/components/pages/RoomList.module.scss
+++ b/indico/modules/rb_new/client/js/components/pages/RoomList.module.scss
@@ -15,13 +15,27 @@
  * along with Indico; if not, see <http://www.gnu.org/licenses/>.
  */
 
-import bookRoomReducer from './bookRoom';
-import userReducer from './user';
-import roomBookingReducer from './roomBooking';
+.room-list {
+    width: 65%;
 
+    .results-count {
+        margin-bottom: 10px;
+        font-weight: bold;
+        font-size: 1.5em;
+    }
 
-export {
-    bookRoomReducer,
-    userReducer,
-    roomBookingReducer
-};
+    .room-card {
+        min-height: 300px;
+        max-width: 240px;
+
+        .available-equipment {
+            text-align: right;
+        }
+
+        .room-card-description {
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            overflow: hidden;
+        }
+    }
+}
