Add a simple text box filtering the rooms

--- a/indico/modules/rb_new/client/js/components/pages/RoomList.module.scss
+++ b/indico/modules/rb_new/client/js/components/pages/RoomList.module.scss
@@ -15,6 +15,18 @@
  * along with Indico; if not, see <http://www.gnu.org/licenses/>.
  */
 
+:global {
+    .ant-list-item {
+        .ant-list-item-content {
+            width: 100%;
+
+            .ant-card-body {
+                max-width: 100%;
+            }
+        }
+    }
+}
+
 .room-list {
     width: 65%;
 
@@ -26,7 +38,6 @@
 
     .room-card {
         min-height: 300px;
-        max-width: 240px;
 
         .available-equipment {
             text-align: right;
