--- a/indico/modules/rb_new/client/js/components/TextSearch.module.scss
+++ b/indico/modules/rb_new/client/js/components/TextSearch.module.scss
@@ -15,26 +15,11 @@
  * along with Indico; if not, see <http://www.gnu.org/licenses/>.
  */
 
-import * as actions from '../actions';
+.text-filter {
+    width: 350px;
+    margin-bottom: 25px;
+}
 
-
-const initialState = {
-    rooms: [],
-    isFetching: false,
-    textFilter: null
-};
-
-export default function roomBookingReducer(state = initialState, action) {
-    switch (action.type) {
-        case actions.FETCH_ROOMS_STARTED:
-            return {...state, isFetching: true};
-        case actions.FETCH_ROOMS_FAILED:
-            return {...state, isFetching: false};
-        case actions.UPDATE_ROOMS:
-            return {...state, rooms: action.rooms, isFetching: false};
-        case actions.SET_TEXT_FILTER:
-            return {...state, textFilter: action.textFilter};
-        default:
-            return state;
-    }
+.filters-select {
+    width: 110px;
 }
