--- a/indico/modules/rb_new/client/js/components/pages/RoomList.module.scss
+++ b/indico/modules/rb_new/client/js/components/pages/RoomList.module.scss
@@ -38,6 +38,7 @@
 
     .room-card {
         min-height: 300px;
+        width: 200px;
 
         .available-equipment {
             text-align: right;
