--- a/indico/modules/rb_new/client/js/components/filters/RecurrenceForm.module.scss
+++ b/indico/modules/rb_new/client/js/components/filters/RecurrenceForm.module.scss
@@ -15,23 +15,7 @@
  * along with Indico; if not, see <http://www.gnu.org/licenses/>.
  */
 
-import debounce from 'lodash/debounce';
-import {connect} from 'react-redux';
+.recurrence-freq-item {
+    display: block;
+}
 
-import TextSearch from '../components/TextSearch';
-import {setFilterParameter, fetchRooms} from '../actions';
-
-
-export default (namespace) => {
-    const mapDispatchToProps = dispatch => ({
-        setTextFilter: debounce((value) => {
-            dispatch(setFilterParameter(namespace, 'text', value));
-            dispatch(fetchRooms(namespace));
-        }, 250)
-    });
-
-    return connect(
-        null,
-        mapDispatchToProps
-    )(TextSearch);
-};
