Use rc-time-picker instead of antd

--- a/indico/modules/rb_new/client/js/components/filters/TimeForm.module.scss
+++ b/indico/modules/rb_new/client/js/components/filters/TimeForm.module.scss
@@ -15,10 +15,6 @@
  * along with Indico; if not, see <http://www.gnu.org/licenses/>.
  */
 
-.filter-dropdown-button :global i.icon.angle.down {
-    padding-left: 1em;
-}
-
-.filter-dropdown-footer:global(.ui.buttons) {
-    margin-top: 10px;
+.time-picker {
+    width: 90px;
 }
