Move RecurrenceForm to semantic-ui-react

--- a/indico/modules/rb_new/client/js/components/filters/RecurrenceForm.module.scss
+++ b/indico/modules/rb_new/client/js/components/filters/RecurrenceForm.module.scss
@@ -15,7 +15,12 @@
  * along with Indico; if not, see <http://www.gnu.org/licenses/>.
  */
 
-.recurrence-freq-item {
-    display: block;
-}
+ .recurrence-every:global(.fields.inline) {
+    :global .ui.selection.dropdown {
+        min-width: 100px;
+    }
 
+    :global .field .ui.input input {
+        width: 80px;
+    }
+}
