--- a/indico/modules/rb_new/client/js/components/Menu.module.scss
+++ b/indico/modules/rb_new/client/js/components/Menu.module.scss
@@ -26,6 +26,7 @@ ul.rb-menu {
     border-bottom: none;
     line-height: $menu-height;
     margin-bottom: 0;
+    margin-top: 0;
     padding: 0;
     width: 100%;
 }
