Add a landing page placeholder in form of stats

--- a/indico/modules/rb_new/client/js/components/pages/Landing.module.scss
+++ b/indico/modules/rb_new/client/js/components/pages/Landing.module.scss
@@ -50,4 +50,18 @@ $text-blue: #2a606b;
             width: 250px;
         }
     }
+
+    .statistics {
+        margin-top: 55px;
+
+        :global(.ui.statistic) {
+            :global(.value), :global(.label) {
+                color: #7dcfb6;
+            }
+
+            &:not(:last-child) {
+                margin-right: 20px;
+            }
+        }
+    }
 }
